--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@
 # This file specifies your Python application's runtime configuration.
 # See https://cloud.google.com/appengine/docs/managed-vms/config for details.
 
-runtime: python
+runtime: python27
 env: standard
 entrypoint: gunicorn -b :$PORT main:app
 
