--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,15 @@
 runtime: python39  # Use Python 3.9 runtime or another available Python 3 version
 env: standard
-entrypoint: gunicorn -b :$PORT main:app  # Ensure that your 'main.py' file has the 'app' object
+
+entrypoint: gunicorn -b :$PORT main:app  # Ensure that 'app' is created in main.py with acggiftart.create_app(config)
 
 runtime_config:
-  python_version: 3
+  python_version: 3  # Specifies Python 3 as the version for the app
 
 beta_settings:
-    # If using Cloud SQL, uncomment and set this value to the Cloud SQL
-    # connection name, e.g.
-    #   "project:region:cloudsql-instance"
-    # You must also update the values in config.py.
-    #
-    # cloud_sql_instances: "your-cloudsql-connection-name"
+  # If using Cloud SQL, uncomment and set this value to the Cloud SQL
+  # connection name, e.g.
+  #   "project:region:cloudsql-instance"
+  # You must also update the values in config.py.
+  #
+  # cloud_sql_instances: "your-cloudsql-connection-name"
