--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@
 # See https://cloud.google.com/appengine/docs/standard/python3/configuring-your-app-for-app-engine for details.
 
 runtime: python39  # Use Python 3.9 runtime (updated from python27)
-env: standard
+env: flex
 entrypoint: gunicorn -b :$PORT main:app  # Ensure that 'app' is created in main.py with acggiftart.create_app(config)
 
 # Remove the `runtime_config` block unless you have a specific reason for it.
