--- a/app.yaml
+++ b/app.yaml
@@ -1,31 +1,3 @@
-# Copyright 2015 Google Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-# This file specifies your Python application's runtime configuration.
-# See https://cloud.google.com/appengine/docs/standard/python3/configuring-your-app-for-app-engine for details.
-
-runtime: python39  # Use Python 3.9 runtime (updated from python27)
-env: flex
-entrypoint: gunicorn -b :$PORT main:app  # Ensure that 'app' is created in main.py with acggiftart.create_app(config)
-
-# Remove the `runtime_config` block unless you have a specific reason for it.
-# Python 3 is the default for the `python39` runtime.
-
-beta_settings:
-  # If using Cloud SQL, uncomment and set this value to the Cloud SQL
-  # connection name, e.g.
-  #   "project:region:cloudsql-instance"
-  # You must also update the values in config.py.
-  #
-  # cloud_sql_instances: "your-cloudsql-connection-name"
+runtime: python39  # Correct runtime for Python 3.9
+env: standard
+entrypoint: gunicorn -b :$PORT main:app  # This runs your app using Gunicorn
